force-app/main/default/objects/QB_Bill_Payment_Transaction_Number__c/QB_Bill_Payment_Transaction_Number__c.object-meta.xml
<CustomObject>
    <description>Junction object (Transactions) between Bill and Bill Payments</description>
    <label>QB Bill Payment Transaction Number</label>
    <nameField>
        <label>Bill Payment Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Bill Payment Transaction Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>