force-app/main/default/objects/QB_Bill_Payment_Transaction_Number__c/fields/Created_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_in_QBO_Date__c</fullName>
    <formula>QB_Bill_Payment__r.QB_Created_in_QBO_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>