force-app/main/default/objects/QB_Bill_Payment_Transaction_Number__c/fields/Last_Modified_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_in_QBO_Date__c</fullName>
    <formula>QB_Bill_Payment__r.QB_Last_Modified_in_QBO_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>