force-app/main/default/objects/QB_Bill_Payment_Transaction_Number__c/fields/QB_Amount__c.field-meta.xml
<CustomField>
    <fullName>QB_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>