force-app/main/default/objects/QB_Bill_Payment_Transaction_Number__c/fields/QB_Bill_PO__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_PO__c</fullName>
    <label>QB Bill / PO</label>
    <referenceTo>QB_Bill_PO__c</referenceTo>
    <relationshipLabel>QB Bill Payment Transaction Number</relationshipLabel>
    <relationshipName>QB_Bill_Payment_Transaction_Number</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>