force-app/main/default/objects/QB_Bill_Payment_Transaction_Number__c/fields/QB_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Account__c</fullName>
    <formula>QB_Bill_Payment__r.QB_Payment_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account</label>
    <type>Text</type>
</CustomField>